[package]
name = "rs-arboretum"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Nielsen"]
license-file = "LICENSE.txt"
description = "A study in trees."

repository = "https://github.com/MatthewNielsen27/arboretum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
